--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="container">
         <div id="carousel" class="carousel">
             <ul id="slides-container" class="slides">
-                <li class="slide active">Slide 1</li>
-                <li class="slide">Slide 2</li>
-                <li class="slide">Slide 3</li>
-                <li class="slide">Slide 4</li>
-                <li class="slide">Slide 5</li>
+                <li class="slide active"></li>
+                <li class="slide"></li>
+                <li class="slide"></li>
+                <li class="slide"></li>
+                <li class="slide"></li>
             </ul>
         </div>
     </div>
